[tool.poetry]
name = "url"
version = "1.0.0"
description = "url"
authors = ["Maximilian Cyprys <mc.cyprysik@icloud.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poe.tasks.start]
help = "Run production server"
cmd = "gunicorn src.app:async_app_factory --worker-class=aiohttp.GunicornWebWorker"

[tool.poe.tasks.dev]
help = "Run development server with hot-reloading"
cmd = "adev runserver src/app.py --app-factory async_app_factory --livereload"

[tool.poe.tasks.test]
help = "Run tests"
cmd = "pytest"

[tool.poe.tasks.format]
help = "Format code using black formatter"
cmd = "black -l 120 ."

[tool.poe.tasks.lint]
help = "Lint code using flake8"
cmd = "flake8 ."

[tool.poe.tasks.precommit]
help = "Install pre-commit hooks to this git repository"
cmd = "pre-commit install"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
loguru = "^0.6.0"
asyncpg = "^0.26.0"
python-dotenv = "^0.21.0"
pydantic = "^1.10.2"
gunicorn = "^20.1.0"
argon2-cffi = "^21.3.0"
email-validator = "^1.3.0"
requests = "^2.28.2"
aiohttp-devtools = "1.0.post0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-aiohttp = "^1.0.4"
pytest-asyncio = "^0.19.0"
black = { version = "^22.8.0", allow-prereleases = true }
flake8 = "^5.0.4"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.3"
pre-commit = "^2.20.0"
isort = "^5.10.1"
poethepoet = "^0.16.5"
aiohttp-devtools = "1.0.post0"
faker = "^15.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
skip-string-normalization = true
